Добавлена страница с выводом всех школ и сделано автодополнение строки поиска

--- a/MusicIsNearBy/index.html
+++ b/MusicIsNearBy/index.html
@@ -88,7 +88,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-paint-brush-line"></i>
-            <h3><a href="">Детально об учреждении</a></h3>
+            <h3><a href="schools.php">Детально об учреждении</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
@@ -299,7 +299,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-info-circle"></i></div>
-              <h4><a href="">Подробная информация о школе</a></h4>
+              <h4><a href="schools.php">Подробная информация о школе</a></h4>
               <p>Получите доступ к подробной информации о каждой музыкальной школе, включая их специализацию, программы,
                 преподавателей, и другие важные сведения</p>
             </div>
@@ -361,7 +361,7 @@
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Просмотреть школы на карте</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Сравнить школы</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Заявка на аренду инструмента</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Подробная информация о школе</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="schools.php">Подробная информация о школе</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Поиск с фильтрацией</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Статьи о музыкальном образовании</a></li>
               </ul>
