Сформирован вывод школ на яндекс карту, оформлены карточки для карты и метка школы

--- a/MusicIsNearBy/index.html
+++ b/MusicIsNearBy/index.html
@@ -70,7 +70,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="bi bi-pin-map"></i>
-            <h3><a href="">Просмотреть на карте</a></h3>
+            <h3><a href="mapschools.php">Просмотреть на карте</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
