Оформлен вывод школы на карте у страницы "карточки" школы, также оформлен переход на страницу с информацией при нажатии на карточку на карте

--- a/MusicIsNearBy/index.html
+++ b/MusicIsNearBy/index.html
@@ -144,29 +144,58 @@
 
         <div class="clients-slider swiper">
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/clients/default.png" class="img-fluid" alt=""
-                title="ГБУДО г. Москвы «Московская городская детская музыкальная школа имени Гнесиных»"></div>
-            <div class="swiper-slide"><img src="assets/img/clients/unnamed.jpg" class="img-fluid" alt=""
-                title="Центральная музыкальная школа, Московская государственная консерватория им. П.И. Чайковского»">
+            <div class="swiper-slide">
+              <a href="school_details.php?school_name=ГБУДО%20г.%20Москвы%20«МГДМШ%20им.%20Гнесиных»">
+                <img src="assets/img/clients/default.png" class="img-fluid" alt=""
+                  title="ГБУДО г. Москвы «Московская городская детская музыкальная школа имени Гнесиных»">
+              </a>
             </div>
-            <div class="swiper-slide"><img src="assets/img/clients/prokofiev.jpg" class="img-fluid" alt=""
-                title="Московская городская детская музыкальная школа имени С.С. Прокофьева»"></div>
-            <div class="swiper-slide"><img src="assets/img/clients/scrabin.jpg" class="img-fluid" alt=""
-                title="Детская музыкальная школа им. А. Н. Скрябина»"></div>
-            <div class="swiper-slide"><img src="assets/img/clients/ivanova.jpg" class="img-fluid" alt=""
-                title="Детская музыкальная школа им. М. М. Ипполитова-Иванова»"></div>
-            <div class="swiper-slide"><img src="assets/img/clients/shnitke.jpeg" class="img-fluid" alt=""
-                title="Детская музыкальная школа имени Ю. А. Шапорина, структурное подразделение Мгим имени А. Г. Шнитке»">
+            <div class="swiper-slide">
+              <a href="school_details.php?school_name=ГБУДО%20г.Москвы%20«МГДМШ%20им.%20С.С.Прокофьева»">
+                <img src="assets/img/clients/unnamed.jpg" class="img-fluid" alt=""
+                  title="Центральная музыкальная школа, Московская государственная консерватория им. П.И. Чайковского»">
+              </a>
             </div>
-            <div class="swiper-slide"><img src="assets/img/clients/arenski.jpg" class="img-fluid" alt=""
-                title="Детская музыкальная школа им. А. С. Аренского"></div>
-            <div class="swiper-slide"><img src="assets/img/clients/chopin.jpg" class="img-fluid" alt=""
-                title="Московский Государственный колледж музыкального исполнительства им. Ф. Шопена»"></div>
+            <div class="swiper-slide">
+              <a href="school_details.php?school_name=ГБУДО%20г.Москвы%20«МГДМШ%20им.%20С.С.Прокофьева»">
+                <img src="assets/img/clients/prokofiev.jpg" class="img-fluid" alt=""
+                  title="Московская городская детская музыкальная школа имени С.С. Прокофьева">
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="school_details.php?school_name=ГБУДО%20г.%20Москвы%20«ДМШ%20им.%20А.Н.Скрябина»">
+                <img src="assets/img/clients/scrabin.jpg" class="img-fluid" alt=""
+                  title="Детская музыкальная школа им. А. Н. Скрябина">
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="school_details.php?school_name=ГБУДО%20г.%20Москвы%20«ДМШ%20им.%20М.М.Ипполитова-Иванова»">
+                <img src="assets/img/clients/ivanova.jpg" class="img-fluid" alt=""
+                  title="Детская музыкальная школа им. М. М. Ипполитова-Иванова">
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="school_details.php?school_name=ГБОУ%20ВО%20МГИМ%20им.%20А.Г.%20Шнитке">
+                <img src="assets/img/clients/shnitke.jpeg" class="img-fluid" alt=""
+                  title="Детская музыкальная школа имени Ю. А. Шапорина, структурное подразделение Мгим имени А. Г. Шнитке">
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="school_details.php?school_name=ГБУДО%20г.%20Москвы%20«ДМШ%20им.%20А.С.Аренского»">
+                <img src="assets/img/clients/arenski.jpg" class="img-fluid" alt=""
+                  title="Детская музыкальная школа им. А. С. Аренского">
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="school_details.php?school_name=ГБПОУ%20г.%20Москвы%20«МГКМИ%20им.%20Ф.Шопена»">
+                <img src="assets/img/clients/chopin.jpg" class="img-fluid" alt=""
+                  title="Московский Государственный колледж музыкального исполнительства им. Ф. Шопена">
+              </a>
+            </div>
+            <div class="swiper-pagination"></div>
           </div>
-          <div class="swiper-pagination"></div>
-        </div>
 
-      </div>
+        </div>
     </section><!-- End TopSchools Section -->
 
     <!-- ======= Features Section ======= -->
