Добавлены отдельные страницы для вывода обеспечения школы и начата разработка заявки на аренду

--- a/MusicIsNearBy/index.html
+++ b/MusicIsNearBy/index.html
@@ -192,10 +192,11 @@
                   title="Московский Государственный колледж музыкального исполнительства им. Ф. Шопена">
               </a>
             </div>
-            <div class="swiper-pagination"></div>
           </div>
-
+          <div class="swiper-pagination"></div>
         </div>
+      </div>
+
     </section><!-- End TopSchools Section -->
 
     <!-- ======= Features Section ======= -->
@@ -387,7 +388,7 @@
             <div class="col-lg-3 col-md-6 footer-links">
               <h4>Наши сервисы</h4>
               <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Просмотреть школы на карте</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="mapschools.php">Просмотреть школы на карте</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Сравнить школы</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Заявка на аренду инструмента</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="schools.php">Подробная информация о школе</a></li>
